--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-asn1crypto==1.2.0
-cffi==1.13.1
+cffi==1.14.5
 cryptography==3.3.2
 dnspython==1.16.0
-future==0.18.1
-linecache2==1.0.0
-publicsuffix==1.1.0
-publicsuffixlist==0.6.11
-pybase64==0.5.0
-pycparser==2.19
-six==1.12.0
-traceback2==1.4.0
-unittest2==1.1.0
+enum34==1.1.10
+future==0.18.2
+ipaddress==1.0.23
+publicsuffix==1.1.1
+publicsuffixlist==0.7.7
+pycparser==2.20
+six==1.15.0
