--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -10,11 +10,24 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [2.7, 3.6, 3.7, 3.8, 3.9]
+        include:
+          - python-version: 2.7
+            os: ubuntu-18.04
+          - python-version: 3.6
+            os: ubuntu-20.04
+          - python-version: 3.7
+            os: ubuntu-22.04
+          - python-version: 3.8
+            os: ubuntu-22.04
+          - python-version: 3.9
+            os: ubuntu-22.04
+          - python-version: 3.10
+            os: ubuntu-22.04
+          - python-version: 3.11
+            os: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v2
