--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -24,9 +24,9 @@ jobs:
             os: ubuntu-22.04
           - python-version: 3.9
             os: ubuntu-22.04
-          - python-version: 3.10
+          - python-version: "3.10"
             os: ubuntu-22.04
-          - python-version: 3.11
+          - python-version: "3.11"
             os: ubuntu-22.04
 
     steps:
