--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,14 +1,14 @@
-cffi>=1.14.5
-cryptography>=3.3.2
-dnspython>=1.16.0
-enum34>=1.1.10
-future>=0.18.2
-ipaddress>=1.0.23
-linecache2>=1.0.0
-publicsuffix>=1.1.1
-publicsuffixlist>=0.7.7
-pycparser>=2.20
-six>=1.15.0
-traceback2>=1.4.0
-unittest2>=1.1.0
+cffi==1.14.5
+cryptography==3.3.2
+dnspython==1.16.0
+enum34==1.1.10
+future==0.18.2
+ipaddress==1.0.23
+linecache2==1.0.0
+publicsuffix==1.1.1
+publicsuffixlist==0.7.7
+pycparser==2.20
+six==1.15.0
+traceback2==1.4.0
+unittest2==1.1.0
 pytest
