--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -14,20 +14,22 @@ jobs:
     strategy:
       matrix:
         include:
-#          - python-version: 2.7
-#            os: ubuntu-18.04
-#          - python-version: 3.6
-#            os: ubuntu-20.04
-#          - python-version: 3.7
-#            os: ubuntu-22.04
-#          - python-version: 3.8
-#            os: ubuntu-22.04
+          - python-version: 2.7
+            os: ubuntu-18.04
+          - python-version: 3.6
+            os: ubuntu-20.04
+          - python-version: 3.7
+            os: ubuntu-22.04
+          - python-version: 3.8
+            os: ubuntu-22.04
           - python-version: 3.9
             os: ubuntu-22.04
-#          - python-version: "3.10"
-#            os: ubuntu-22.04
-#          - python-version: "3.11"
-#            os: ubuntu-22.04
+          - python-version: "3.10"
+            os: ubuntu-22.04
+          - python-version: "3.11"
+            os: ubuntu-22.04
+          - python-version: "3.12"
+            os: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v2
