--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -16,6 +16,8 @@ jobs:
         include:
           - python-version: 2.7
             os: ubuntu-18.04
+          - python-version: 3.5
+            os: ubuntu-20.04
           - python-version: 3.6
             os: ubuntu-20.04
           - python-version: 3.7
@@ -32,10 +34,10 @@ jobs:
             os: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
