--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -15,32 +15,33 @@ jobs:
       matrix:
         include:
           - python-version: 2.7
-            os: ubuntu-18.04
-          - python-version: 3.5
             os: ubuntu-20.04
-          - python-version: 3.6
-            os: ubuntu-20.04
-          - python-version: 3.7
-            os: ubuntu-22.04
-          - python-version: 3.8
-            os: ubuntu-22.04
-          - python-version: 3.9
-            os: ubuntu-22.04
-          - python-version: "3.10"
-            os: ubuntu-22.04
-          - python-version: "3.11"
-            os: ubuntu-22.04
-          - python-version: "3.12"
-            os: ubuntu-22.04
+#          - python-version: 3.6
+#            os: ubuntu-20.04
+#          - python-version: 3.7
+#            os: ubuntu-22.04
+#          - python-version: 3.8
+#            os: ubuntu-22.04
+#          - python-version: 3.9
+#            os: ubuntu-22.04
+#          - python-version: "3.10"
+#            os: ubuntu-22.04
+#          - python-version: "3.11"
+#            os: ubuntu-22.04
+#          - python-version: "3.12"
+#            os: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python-version }} != 2.7
+      if: ${{ matrix.python-version != '2.7' }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-
+    - name: Set up Python 2.7
+      if: ${{ matrix.python-version == '2.7' }}
+      run: sudo ln -sf /usr/bin/python2.7 /usr/bin/python
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
