--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -41,7 +41,13 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Set up Python 2.7
       if: ${{ matrix.python-version == '2.7' }}
-      run: sudo ln -sf /usr/bin/python2.7 /usr/bin/python
+      run: | 
+        sudo ln -sf /usr/bin/python2.7 /usr/bin/python
+        sudo apt install curl
+        curl https://bootstrap.pypa.io/pip/2.7/get-pip.py --output get-pip.py
+        sudo python get-pip.py
+        which pip2
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
