--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,6 @@
 cffi>=1.14.5
-cryptography>=3.3.2
+cryptography==3.3.2; python_version == '2.7'
+cryptography==39.0.1; python_version > '2.7'
 dnspython>=1.16.0
 enum34>=1.1.10
 future>=0.18.2
