--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -69,6 +69,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install setuptools
     - name: build distribution packages
       run: python setup.py sdist bdist_wheel
     - name: Build and publish to PyPI
